--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <script src="https://kit.fontawesome.com/3857b0a1bd.js" crossorigin="anonymous"></script>
+
+    <script src="./js/config.js"></script>
+    <script>
+        const kitScript = document.createElement('script');
+        kitScript.src = `https://kit.fontawesome.com/${CONFIG.FONT_AWESOME_KIT}.js`;
+        kitScript.crossOrigin = "anonymous";
+        document.head.appendChild(kitScript);
+    </script>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
